--- a/package.json
+++ b/package.json
@@ -1,8 +1,14 @@
 {
   "dependencies": {
-    "@stoplight/spectral-cli": "^6.3.0"
+    "@stoplight/spectral-cli": "^6.3.0",
+    "remark-cli": "^9.0.0",
+    "remark-lint-no-dead-urls": "^1.1.0",
+    "remark-preset-lint-recommended": "^5.0.0",
+    "remark-validate-links": "^10.0.4"
   },
   "scripts": {
-    "api:lint": "spectral lint ./reference/**/*.{json,yml,yaml} --fail-severity warn"
+    "api:lint": "spectral lint ./reference/**/*.{json,yml,yaml} --fail-severity warn",
+    "docs:lint": "remark ./docs/ --frail",
+    "docs:lint:fix": "remark ./docs/ --frail -o"
   }
 }
