--- a/.github/workflows/publish-widgets.yml
+++ b/.github/workflows/publish-widgets.yml
@@ -6,5 +6,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
+      - name: Get branch name
+        id: branch-name
+        uses: tj-actions/branch-names@v5.2
+
       - name: Publish
-        run: npx @stoplight/cli@5 push -d projects/widgets -b ${GITHUB_REF##*/} --ci-token ${{ secrets.CI_TOKEN_WIDGETS }} --verbose
+        run: npx @stoplight/cli@5 push -d projects/widgets -b ${{ steps.branch-name.outputs.current_branch }} --ci-token ${{ secrets.CI_TOKEN_WIDGETS }} --verbose
