Don't use frail when fixing errors

--- a/package.json
+++ b/package.json
@@ -9,6 +9,6 @@
   "scripts": {
     "api:lint": "spectral lint ./projects/**/reference/**/*.{json,yml,yaml} --fail-severity warn",
     "docs:lint": "remark ./projects/**/*.md --frail",
-    "docs:lint:fix": "remark ./projects/**/*.md --frail -o"
+    "docs:lint:fix": "remark ./projects/**/*.md -o"
   }
 }
