--- a/.github/workflows/publish-api-design-guidelines.yml
+++ b/.github/workflows/publish-api-design-guidelines.yml
@@ -1,4 +1,4 @@
-name: Publish guidelines documentation
+name: Publish api design guidelines documentation
 on: push
 jobs:
   publish:
@@ -9,5 +9,5 @@ jobs:
       - name: Publish
         uses: ./.github/actions/stoplight-push
         with:
-          name: guidelines
+          name: api-design-guidelines
           token: ${{ secrets.CI_TOKEN_GUIDELINES }}
