Also check & fix readme.md

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "api:lint": "spectral lint ./projects/**/reference/**/*.{json,yml,yaml} --fail-severity warn",
-    "docs:lint": "remark ./projects/**/*.md --frail",
-    "docs:lint:fix": "remark ./projects/**/*.md -o"
+    "docs:lint": "remark ./projects/**/*.md readme.md --frail",
+    "docs:lint:fix": "remark ./projects/**/*.md readme.md -o"
   }
 }
