--- a/.github/workflows/split-udb3-json-schemas.yml
+++ b/.github/workflows/split-udb3-json-schemas.yml
@@ -6,7 +6,11 @@ jobs:
   split:
     runs-on: ubuntu-latest
     steps:
-      -   uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Get branch name
+        id: branch-name
+        uses: tj-actions/branch-names@v5.2
       # no tag
       - if: "!startsWith(github.ref, 'refs/tags/')"
         uses: "symplify/monorepo-split-github-action@2.1"
@@ -16,6 +20,7 @@ jobs:
           repository_name: 'udb3-json-schemas'
           user_name: "dev-publiq"
           user_email: "dev@publiq.be"
+          branch: ${{ steps.branch-name.outputs.current_branch }}
       # with tag
       - if: "startsWith(github.ref, 'refs/tags/')"
         uses: "symplify/monorepo-split-github-action@2.1"
@@ -26,3 +31,4 @@ jobs:
           repository_name: 'udb3-json-schemas'
           user_name: "dev-publiq"
           user_email: "dev@publiq.be"
+          branch: ${{ steps.branch-name.outputs.current_branch }}
